--- a/templates/completed_jobs/edit.html.twig
+++ b/templates/completed_jobs/edit.html.twig
@@ -1,10 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit CompletedJobs{% endblock %}
+{% block title %}Redaguoti atliktą darbą{% endblock %}
 
 {% block body %}
     {% set current = {'current_place': 'Redaguoti darbą'} %}
     {% include 'header.html.twig' with current %}
+
+    <br>
 
     {{ include('completed_jobs/_form.html.twig', {'button_label': 'Atnaujinti'}) }}
 
