--- a/templates/completed_jobs/new.html.twig
+++ b/templates/completed_jobs/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New CompletedJobs{% endblock %}
+{% block title %}Naujas atliktas darbas{% endblock %}
 
 {% block body %}
     {% set current = {'current_place': 'Pridėti darbą'} %}
