--- a/templates/job_cypher/_delete_form.html.twig
+++ b/templates/job_cypher/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('job_cypher_delete', {'id': job_cypher.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('job_cypher_delete', {'id': job_cypher.id}) }}" onsubmit="return confirm('Ar tikrai norite pašalinti?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ job_cypher.id) }}">
-    <button class="fas fa-trash-alt">Ištrinti</button>
+    <button type="submit" class="btn btn-light fas fa-trash-alt"> Ištrinti</button>
 </form>
