--- a/templates/job_cypher/edit.html.twig
+++ b/templates/job_cypher/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit JobCypher{% endblock %}
+{% block title %}Redaguoti šifrą{% endblock %}
 
 {% block body %}
     {% set current = {'current_place': 'Keisti šifrą'} %}
