--- a/templates/job_cypher/new.html.twig
+++ b/templates/job_cypher/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New JobCypher{% endblock %}
+{% block title %}Naujas šifras{% endblock %}
 
 {% block body %}
     {% set current = {'current_place': 'Pridėti šifrą'} %}
