--- a/templates/road_section/_form.html.twig
+++ b/templates/road_section/_form.html.twig
@@ -1,22 +1,11 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+{% endblock %}
+
 {% block body %}
 
-    <style>
-        .button {
-            background-color: #009879;
-            border: none;
-            color: white;
-            padding: 15px 32px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            margin: 4px 2px;
-            cursor: pointer;
-            width: 100%;
-        }
-    </style>
 
     <div class="container-fluid">
         <div class="row">
