--- a/templates/road_section/new.html.twig
+++ b/templates/road_section/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New RoadSection{% endblock %}
+{% block title %}Naujas ruožas{% endblock %}
 
 {% block body %}
     {% set current = {'current_place': 'Pridėti kelio ruožą'} %}
