--- a/templates/completed_jobs/_delete_form.html.twig
+++ b/templates/completed_jobs/_delete_form.html.twig
@@ -1,5 +1,6 @@
-<form method="post" action="{{ path('completed_jobs_delete', {'id': completed_job.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+
+<form method="post" action="{{ path('completed_jobs_delete', {'id': completed_job.id}) }}" onsubmit="return confirm('Ar tikrai norite pašalinti?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ completed_job.id) }}">
-    <button class="fas fa-trash-alt">Ištrinti</button>
+    <button type="submit" class="btn btn-light fas fa-trash-alt"> Ištrinti</button>
 </form>
