--- a/templates/job_cypher/_form.html.twig
+++ b/templates/job_cypher/_form.html.twig
@@ -1,18 +1,6 @@
-<style>
-    .button {
-        background-color: #009879;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-        width: 100%;
-    }
-</style>
+{% block stylesheets %}
+    <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+{% endblock %}
 
 <div class="container-fluid">
     <div class="row">
